package org.nostea.gift.model;

public enum GroupMode {
    SECRET,
    OPEN
}
