package org.nostea.gift.model;

public enum GroupType {
    BIRTHDAY,
    CHRISTMAS
}
