package org.nostea.gift.model;

public enum UserRole {
    ADMIN,
    USER
}
